--- a/index.html
+++ b/index.html
@@ -1,97 +1,178 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <!-- Google Analytics Script -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-X2LDSDN57W"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-X2LDSDN57W');
+  </script>
   <title>Simple Timer</title>
   <style>
     body {
-      text-align: center;
       font-family: Arial, sans-serif;
+      background-color: #f2f2f2;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
+      overflow: hidden; /* Disable scrolling */
     }
+
     h1 {
       color: #333;
+      margin-bottom: 20px;
+	  margin-top: -30px;
     }
+
+    .timer-container {
+      display: flex;
+      align-items: center;
+	 
+    }
+
+    .time-input {
+      margin-right: 10px;
+      padding: 8px;
+      font-size: 20px;
+      border: none;
+      border-radius: 4px;
+      text-align: center;
+    }
+
+    .time-input:focus {
+      outline: none;
+    }
+
+    .button {
+      padding: 10px 20px;
+	  margin-top: 20px;
+      font-size: 16px;
+      border: none;
+      border-radius: 4px;
+      cursor: pointer;
+      background-color: #333;
+      color: #fff;
+    }
+
+    .button:not(:last-child) {
+      margin-right: 10px;
+    }
+
     .timer {
       font-size: 48px;
-      margin: 20px 0;
+      margin-top: 20px;
     }
-    .buttons {
-      margin: 20px 0;
+
+    .message {
+      margin-top: 20px;
+      font-size: 20px;
+      color: #555;
     }
-    button {
-      padding: 10px 20px;
-      font-size: 16px;
-      margin: 0 5px;
+
+    .donate {
+      margin-top: 40px;
+      font-style: italic;
+      color: #888;
     }
-    input {
-      padding: 5px;
-      font-size: 16px;
-      width: 60px;
-      margin-right: 10px;
+
+    .donate a {
+      color: #888;
+      text-decoration: none;
+    }
+
+    .donate a:hover {
+      text-decoration: underline;
+    }
+
+    /* New styles for completed timer and toggle button */
+    body.completed {
+      background-color: #ffdddd;
+    }
+
+    #pauseBtn::after {
+      content: attr(data-text);
     }
   </style>
 </head>
 <body>
   <h1>Simple Timer</h1>
-  <div>
-    <label for="timeInput">Set time (in minutes):</label>
-    <input id="timeInput" type="number" min="1" max="60" value="25">
-    <button id="startBtn">Start</button>
-    <button id="pauseBtn">Pause</button>
-    <button id="resetBtn">Reset</button>
+  <div class="timer-container">
+    <input id="minutesInput" class="time-input" type="number" min="0" max="60" placeholder="Minutes">
+    <input id="secondsInput" class="time-input" type="number" min="0" max="60" placeholder="Seconds">
   </div>
-  <div class="timer">25:00</div>
+  <div>
+    <button id="startBtn" class="button">Start</button>
 
-  <script>
+    <button id="resetBtn" class="button">Reset</button>
+  </div>
+  <div class="timer">00:00</div>
+  <div id="message" class="message"></div>
+  <div class="donate">If you find this timer useful, consider <a href="https://www.poof.io/tip/@davidinfosec">donating</a> or checking out my <a href="https://davidinfosec.com">blog</a>.</div>
+
+ <script>
     let interval;
-    let timeLeft = 1500; // 25 minutes in seconds
+    let minutes = 0;
+    let seconds = 0;
+    let timeLeft = 0;
     let isRunning = false;
 
     function startTimer() {
       if (!isRunning) {
-        const minutes = parseInt(document.getElementById('timeInput').value);
-        timeLeft = minutes * 60;
-        interval = setInterval(updateTimer, 1000);
-        isRunning = true;
-      }
-    }
+        minutes = parseInt(document.getElementById('minutesInput').value) || 0;
+        seconds = parseInt(document.getElementById('secondsInput').value) || 0;
+        timeLeft = minutes * 60 + seconds;
 
-    function pauseTimer() {
-      clearInterval(interval);
-      isRunning = false;
+        if (timeLeft > 0) {
+          interval = setInterval(updateTimer, 1000);
+          isRunning = true;
+          showMessage('');
+          stopAlarm();
+        } else {
+          showMessage('Please enter a valid time.');
+        }
+      }
     }
 
     function resetTimer() {
       clearInterval(interval);
-      timeLeft = 1500; // Reset to 25 minutes
-      updateTimer();
       isRunning = false;
+      minutes = parseInt(document.getElementById('minutesInput').value) || 25;
+      seconds = parseInt(document.getElementById('secondsInput').value) || 0;
+      timeLeft = minutes * 60 + seconds;
+      updateTimer();
+      showMessage('');
+      document.body.classList.remove('completed');
     }
 
     function updateTimer() {
-      const minutes = Math.floor(timeLeft / 60);
-      let seconds = timeLeft % 60;
-
-      // Add leading zero if seconds < 10
-      seconds = seconds < 10 ? '0' + seconds : seconds;
-
-      document.querySelector('.timer').textContent = `${minutes}:${seconds}`;
-
       if (timeLeft === 0) {
         clearInterval(interval);
-        playAlarm();
         isRunning = false;
+        showMessage('Timer completed.');
+        document.body.classList.add('completed');
       } else {
         timeLeft--;
+        const remainingMinutes = Math.floor(timeLeft / 60);
+        const remainingSeconds = timeLeft % 60;
+
+        document.querySelector('.timer').textContent = `${formatTime(remainingMinutes)}:${formatTime(remainingSeconds)}`;
       }
     }
 
-    function playAlarm() {
-      const audio = new Audio('alarm_sound.mp3'); // Replace with your alarm sound file
-      audio.play();
+    function formatTime(time) {
+      return time < 10 ? `0${time}` : time;
+    }
+
+    function showMessage(message) {
+      document.getElementById('message').textContent = message;
     }
 
     document.getElementById('startBtn').addEventListener('click', startTimer);
-    document.getElementById('pauseBtn').addEventListener('click', pauseTimer);
     document.getElementById('resetBtn').addEventListener('click', resetTimer);
   </script>
 </body>
