--- a/index.html
+++ b/index.html
@@ -112,7 +112,8 @@
   </div>
   <div class="timer">00:00</div>
   <div id="message" class="message"></div>
-  <div class="donate">If you find this timer useful, consider <a href="https://www.poof.io/tip/@davidinfosec">donating</a> or checking out my <a href="https://davidinfosec.com">blog</a>.</div>
+<div class="donate">If you find this timer useful, consider <a href="https://www.poof.io/tip/@davidinfosec" target="_blank">donating</a> or checking out my <a href="https://davidinfosec.com" target="_blank">blog</a>.</div>
+
 
  <script>
     let interval;
